--- a/image.html
+++ b/image.html
@@ -6,44 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="image.css">
     <link rel="stylesheet" href="image.js">
-    <script src="image.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <title>Image slider</title>
+    <script src="image.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>slider</h1>
-        <div class="slider-outer">
-            
-            <div class="slider-inner">
-                <img src="image/1.jfif" alt="image1" class="active" width="250px" height="150px">
-                <img src="image/istockphoto-1157655660-612x612.jpg" alt="image 2" width="250px" height="150px">
-                <img src="image/photo-1605559424843-9e4c228bf1c2.jfif" alt="image3" width="250px" height="150px">
+        <div class="outer">
+            <div class="inner">
+                <div class="slide" id="box1" ><img src="images/aston-martin.jpg" alt="Image" width="630px" height="200px"></div>
+                <div class="slide" id="box2"><img src="images/audi-rs-e-tron-gt.jpg" alt="Image" width="630px" height="200px"></div>
+                <div class="slide" id="box3"><img src="images/maserati-mc20.jpg" alt="Image" width="630px" height="200px"></div>
+                <div class="slide" id="box4"><img src="images/nio-et5.jpg" alt="Image" width="630px" height="200px"></div>
 
             </div>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <button>move left</button>
-            <button>move right</button>
-        
+
+
         </div>
+
+        <div class="button1 left"><button>left</button></div>
+        <div class="button2 right"><button>right</button></div>
     </div>
 </body>
 </html>
